<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mobile"
            style="@style/TipsText"
            android:text="@string/mobile" />

        <EditText
            android:id="@+id/et_mobile"
            style="@style/EditText_Base"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:maxLength="11"
            android:hint="@string/tips_mobile"
            android:inputType="phone" />
    </LinearLayout>

    <include
        style="@style/UnderLine_9_35"
        layout="@layout/under_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_identify_code"
            style="@style/TipsText"
            android:text="@string/identify_code" />

        <EditText
            android:id="@+id/et_identify_code"
            style="@style/EditText_Base"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="6"
            android:hint="@string/tips_identify_code_hint"
            android:inputType="number" />


        <com.phjt.shangxueyuan.widgets.CountDownTextView
            android:id="@+id/tv_get_identify_code"
            android:layout_width="82dp"
            android:layout_height="26dp"
            android:background="@drawable/shape_btn_login"
            android:gravity="center"
            android:text="@string/get_identify_code"
            android:textColor="#ffffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <include
        style="@style/UnderLine_0_35"
        layout="@layout/under_line"
        android:layout_marginTop="@dimen/dp_12"
        tools:ignore="IncludeLayoutParam" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22.5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22.5dp"
        android:background="@drawable/shape_bg_register"
        android:gravity="center"
        android:minHeight="45dp"
        android:text="@string/go_next"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>