<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_mobile"
            style="@style/TipsText"
            android:layout_width="72dp"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/etv_new_password"
            style="@style/EditText_Base"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:maxLength="20"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <include
        style="@style/UnderLine_9_35"
        layout="@layout/under_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_identify_code"
            style="@style/TipsText"
            android:layout_width="72dp"
            android:text="@string/new_password_confirm" />

        <EditText
            android:id="@+id/etv_new_password_confirm"
            style="@style/EditText_Base"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <include
        style="@style/UnderLine_0_35"
        layout="@layout/under_line"
        android:layout_marginTop="@dimen/dp_12"
        tools:ignore="IncludeLayoutParam" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22.5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22.5dp"
        android:background="@drawable/shape_bg_register"
        android:gravity="center"
        android:minHeight="45dp"
        android:text="@string/submit_confirm"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>