<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/color030303"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_back" />

    <include
        android:id="@+id/include"
        layout="@layout/layout_mobile_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/tv_password"
            style="@style/TipsText"
            android:text="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    " />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText_Base"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:maxLength="20"
            android:hint="@string/tips_password_reg"
            android:inputType="textPassword" />
    </LinearLayout>

    <include
        android:id="@+id/include_line"
        style="@style/UnderLine_0_35"
        layout="@layout/under_line"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="IncludeLayoutParam" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_bg_register"
        android:gravity="center"
        android:minHeight="45dp"
        android:text="@string/register"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_line" />

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
         android:text="@string/select_and_agree"
        android:textColor="@color/color666666"
        android:textSize="13sp"
        android:paddingStart="2dp"
        android:button="@drawable/selector_radio_button"
        app:layout_constraintStart_toStartOf="@+id/tv_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <TextView
        android:id="@+id/tv_terms_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_privacy_policy"
        android:textColor="@color/color4171FC"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintStart_toEndOf="@+id/check_box"
        app:layout_constraintTop_toTopOf="@+id/check_box" />
    <TextView
        android:id="@+id/tv_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="和"
        android:textColor="@color/color666666"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintStart_toEndOf="@+id/tv_terms_policy"
        app:layout_constraintTop_toTopOf="@+id/check_box"/>
    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_privacy"
        android:textColor="@color/color4171FC"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box"
        app:layout_constraintStart_toEndOf="@+id/tv_term"
        app:layout_constraintTop_toTopOf="@+id/check_box"/>

</androidx.constraintlayout.widget.ConstraintLayout>