<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/include"
        layout="@layout/layout_title_common" />

    <FrameLayout
        android:id="@+id/fl_edit_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@color/color_F5F5F5"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <EditText
            android:id="@+id/edit_feedback"
            android:layout_width="match_parent"
            android:layout_height="229dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="30dp"
            android:background="@null"
            android:fadeScrollbars="false"
            android:gravity="top|start"
            android:hint="@string/hint_feedback_edit"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/color_666666"
            android:textColorHint="#ffb8b8b8"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_input_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="15dp"
            android:text="0/5000"
            android:textColor="@color/color_333333"
            android:textSize="13sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_hint_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/hint_feedback_picture"
        android:textColor="@color/color_333333"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_edit_feedback" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_picture" />

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/shape_btn_login"
        android:gravity="center"
        android:minHeight="45dp"
        android:text="@string/btn_feedback_submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>